--- a/Salvation/.classpath
+++ b/Salvation/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="H:/Documents and Settings/Radi/My Documents/Downloads/smartgwt-3.0/smartgwt-skins.jar"/>
-	<classpathentry kind="lib" path="H:/Documents and Settings/Radi/My Documents/Downloads/smartgwt-3.0/smartgwt.jar"/>
+	<classpathentry kind="lib" path="smartgwt-skins.jar"/>
+	<classpathentry kind="lib" path="smartgwt.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
