--- a/Salvation/war/WEB-INF/web.xml
+++ b/Salvation/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>org.elsys.salvation.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>defenceServiceImpl</servlet-name>
+    <servlet-class>org.elsys.salvation.server.DefenceServiceImpl</servlet-class>
   </servlet>
-  
+
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/salvation/greet</url-pattern>
+    <servlet-name>defenceServiceImpl</servlet-name>
+    <url-pattern>/salvation/defences</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
